# Cornell_JHU-hierarchSIR

./: .gitignore  BENTOLAB-HIERARCHSIR_conda-env.yml  README.md  conda-lock.yml  environment.lock.yml  pyproject.toml  test_forecast.txt
.github/workflows/: backfill-preliminary_NHSN_HRD.yml  check-in_season.yml  debug-merge.yml  fetch-consolidated_NHSN_HRD.yml  fetch-preliminary_NHSN_HRD.yml  fetch_nhsn_hrd_preliminary_with_retry.sh  forecast_pipeline.yml  post-visualisations_slack.yml  run-forecasts.yml  run-unit_tests.yml  slackbot.yml  submit-forecasts.yml  validate-model_setup.yml  validate_model_setup.yml  visualise-forecast.yml  visualise-forecasts.yml
data/: README.md
data/conversion/cases/: backfill_preliminary-NHSN-HRD-data.py  fetch-format_NHSN-HRD-data.py
data/interim/calibration/: hyperparameters.csv  initial_guesses.csv  initial_guesses_orig.csv
data/interim/cases/NHSN-HRD_archive/consolidated/: NHSN-HRD_ending-202548_gathered-2025-12-07-12-17-31.parquet.gzip  NHSN-HRD_reference-date-2025-11-15_gathered-2025-11-16-12-17-06.parquet.gzip  NHSN-HRD_reference-date-2025-11-22_gathered-2025-11-23-12-16-49.parquet.gzip  NHSN-HRD_reference-date-2025-12-13_gathered-2025-12-14-12-02-58.parquet.gzip  NHSN-HRD_reference-date-2025-12-20_gathered-2025-12-28-12-06-11.parquet.gzip  NHSN-HRD_reference-date-2025-12-27_gathered-2026-01-04-12-06-05.parquet.gzip  (+26 more)
scripts/operational/: forecast.py  hierarchical_training.py  optimize-initial_guesses.py  visualise-forecast.py
src/hierarchSIR/: model.py  utils.py
(+112 files in other folders)
